// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default render 1`] = `
<div
  className="custom-dropdown float-left"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="dropdown-btn "
  >
    <div
      className="label"
    >
      Trending
    </div>
    <div
      className="menu-down"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`(2) Show menu 1`] = `
<div
  className="custom-dropdown float-left"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="dropdown-btn hover"
  >
    <div
      className="label"
    >
      Trending
    </div>
    <div
      className="menu-down"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <div
    className="the-menu"
  >
    <div
      className="menu-inner"
    >
      <div
        className="menu-list"
      >
        <div
          className="menu-item active"
          onClick={[Function]}
        >
          <span
            className="item-inner"
          >
            
            Trending
          </span>
        </div>
        <div
          className="menu-item "
          onClick={[Function]}
        >
          <span
            className="item-inner"
          >
            
            Hot
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`(3) Hide menu 1`] = `
<div
  className="custom-dropdown float-left"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="dropdown-btn "
  >
    <div
      className="label"
    >
      Trending
    </div>
    <div
      className="menu-down"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`(4) With custom label and header text 1`] = `
<div
  className="custom-dropdown float-left"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span>
    open menu
  </span>
  <div
    className="the-menu"
  >
    <div
      className="menu-inner"
    >
      <div
        className="menu-header"
      >
        My menu
      </div>
      <div
        className="menu-list"
      >
        <div
          className="menu-item active"
          onClick={[Function]}
        >
          <span
            className="item-inner"
          >
            
            Trending
          </span>
        </div>
        <div
          className="menu-item "
          onClick={[Function]}
        >
          <span
            className="item-inner"
          >
            
            Hot
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
